--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,10 +1,9 @@
 body{
     background-color: lightblue;
 }
-#horizontal{
-    padding-left: 45%;
-
-}
 h1{
     padding-left: 45%;
+}
+ul{
+    margin:0;
 }
