--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 #wrapper{
-    width: 500px;
+    max-width: 960px;
 }
 
 body{
@@ -20,7 +20,7 @@ li{
     display: inline;
     padding-left: 15%;
     background-color: orange;
-    width: 220px;
+    width: 500px;
     
     
 }
