--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,18 +15,21 @@ h1{
 }
 ul{
     margin:0;
+    max-width: 960px;
 
 }
 li{
     float: left;
     display: inline;
-    padding-left: 15%;
     background-color: orange;
-    width: 500px;
+    
     
     
 }
 a{
     display: block;
     font-size: 40px;
+}
+header{
+    width:960px;
 }
