--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,11 +17,13 @@ ul{
     margin:0;
     max-width: 960px;
 
+
 }
 li{
     float: left;
     display: inline;
     background-color: orange;
+    padding-inline: 100px;
     
     
     
