--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,7 +1,13 @@
 #wrapper{
-    max-width: 960px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    bottom: 0%;
+    left: 0%;
+    margin: 0px;
+    padding: 0px;
 }
 
 body{
@@ -9,15 +15,11 @@ body{
 }
 h1{
     padding-top: 150px;
-    margin-left: 33%;
     font-size: 50px;
     
 }
 ul{
-    margin:0;
-    max-width: 960px;
-
-
+    padding-left: 0px;
 }
 li{
     float: left;
@@ -33,5 +35,5 @@ a{
     font-size: 40px;
 }
 header{
-    width:960px;
+
 }
