--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -28,13 +28,14 @@ li{
     background-color: orange;
     padding-inline: 100px;
     width: 100%;
-    
+    text-align: center;
     
     
 }
 a{
     display: block;
     font-size: 40px;
+    
 }
 header{
 
