--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,10 +14,12 @@ body{
     background-color: lightblue;
 }
 #nav{
-    
+
 }
 h1{
     padding-top: 150px;
     font-size: 50px;
-    
+}
+li{
+    display: inline;
 }
