--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,7 +14,7 @@ body{
     background-color: lightblue;
 }
 #nav{
-
+    margin-top: 20px;
 }
 h1{
     padding-top: 150px;
@@ -24,6 +24,7 @@ li{
     display: inline;
     padding: 150px;
     font-size: 25px;
+    
 }
 ul{
     margin: 0;
